Fix spacing issue

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -45,7 +45,7 @@ body{
   display: inline-block;
   position: absolute;
   background:#FF3A02;
-  top: 52px;
+  top: 47px;
   right: -5px;
   left: -5px;
   height: 0.28vw;
@@ -62,7 +62,7 @@ body{
         content: "";
         display: block;
         position: absolute;
-        top: 52px;
+        top: 47px;
         right: -5px;
         left: -5px;
         height: 0.28vw;
